[package]
name = "hondana"
version = "0.1.0"
authors = ["Ivan Soloducha <ivan@soloduha.com>"]
autobins = false

[dependencies]
actix-web = "0.6"
actix = ">=0.5"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
yew = { git = "https://github.com/DenisKolodin/yew" }

[[bin]]
name = "app"
path = "src/frontend/main.rs"

[[bin]]
name = "backend"
path = "src/main.rs"
